# self-llm

examples/ERNIE-4.5-0.3B-PT-Lora/: .gitignore  ERNIE-4.5-0.3B-PT-Lora-Tutorial.ipynb  README.md  config.py  inference.py  model_download.py  pyproject.toml  train.py
examples/MiniCPM-o-2.6-Audio/: README.md  audio_assistant.py  audio_mimick.py  audio_understanding.py  demo_notebook.ipynb  main.py  model_download.py  pyproject.toml  run_demo.py  test_environment.py  voice_generation.py
examples/Qwen3-8B-EvalScope/: README.md  eval_api.py  eval_cli.py  main.py  model_download.py  pyproject.toml
examples/Qwen3-8B-EvalScope/scripts/: run_evaluation.sh  start_vllm_server.sh
examples/Qwen3-8B-vLLM/: README.md  model_download.py  pyproject.toml  start_api_server.py  test_openai_chat_completions.py  test_openai_completions.py  vllm_basic_inference.py  vllm_non_thinking_mode.py  vllm_thinking_mode.py
examples/Qwen3-8B-vLLM/examples/: basic_chat.py  batch_inference.py  streaming_chat.py
examples/Qwen3-8B-vLLM/scripts/: start_server.sh  test_api.sh
examples/gemma-3-4b-it-FastApi/: .gitignore  README.md  api.py  model_download.py  pyproject.toml  test_client.py
