[project]
name = "ernie-4.5-0.3b-pt-lora"
version = "0.1.0"
description = "ERNIE-4.5-0.3B-PT LoRA fine-tuning example with SwanLab visualization using uv for dependency management"
requires-python = ">=3.12"
dependencies = [
    "modelscope",
    "transformers",
    "accelerate",
    "datasets",
    "peft",
    "swanlab",
    "sentencepiece",
    "numpy",
    "pandas",
]

[tool.uv]
dev-dependencies = [
    "jupyter",
    "ipykernel",
]
[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers", rev = "v4.53.2-Ernie-4.5-preview" }
